--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ Website for Springville GSA
 <!-- end www.htmlcommentbox.com -->
       </header>
       <t><font size="1"> Lee forced me to use the pastel flag.</font></t>
+        <t><font size="1"> Rocio is a communist. </font></t>
 
 
 </body>
