--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ Website for Springville GSA
     <title>Springvilel K-8 GSA</title>
     </head>
     <body background="https://i.pinimg.com/originals/de/19/43/de1943f3c84bc8f331c656342fe3a108.jpg">
+      <p align=right> <img src="owen.png"> </p>
       <header><font size=30><b>      </b></header>
   <header> <font size="18"> <b> <p align="center">Welcome to the official website of the Springville K-8 GSA</p> </b> </font>
   <t><p align="right"><font size="5"> Meetings the last day of the school week unless specified.</font></p></t>
@@ -22,7 +23,7 @@ Website for Springville GSA
 <!-- end www.htmlcommentbox.com -->
       </header>
       <t><font size="1"> Lee forced me to use the pastel flag.</font></t>
-        <t><font size="1"> Rocio is a communist. </font></t>
+      
 
 
 </body>
