--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Website for Springville GSA
     <title>Springvilel K-8 GSA</title>
     </head>
     <body background="https://i.pinimg.com/originals/de/19/43/de1943f3c84bc8f331c656342fe3a108.jpg">
-      <p align=right> <img src="https://avatars3.githubusercontent.com/u/38093124?s=400&u=f674a7444ac822843b3d66e2e7479b2449bee678&v=4"> </p>
+      <p align=right> <img src="owen.png" alt="Owen"> </p>
       <header><font size=30><b>      </b></header>
   <header> <font size="18"> <b> <p align="center">Welcome to the official website of the Springville K-8 GSA</p> </b> </font>
   <t><p align="right"><font size="5"> Meetings the last day of the school week unless specified.</font></p></t>
