--- a/index.html
+++ b/index.html
@@ -42,28 +42,28 @@ div.desc {
 
 <div class="gallery">
   <a target="_blank" href="gaymeme4.jpg">
-    <img src="fjords.jpg" alt="Fjords" width="300" height="200">
+    <img src="gaymeme4.jpg" alt="Memes" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="gaymeme3.jpg">
-    <img src="forest.jpg" alt="Forest" width="300" height="200">
+    <img src="gaymeme3.jpg" alt="Memes" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="gaymeme2.jpg">
-    <img src="lights.jpg" alt="Northern Lights" width="300" height="200">
+    <img src="gaymeme2.jpg" alt="Memes" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="gaymeme1.jpg">
-    <img src="mountains.jpg" alt="Mountains" width="300" height="200">
+    <img src="gaymeme1.jpg" alt="Memes" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
