--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <title>Springvilel K-8 GSA</title>
     </head>
+  <script src="https://redalert.battleforthenet.com/widget.js" async></script>
+
     <body background="https://i.pinimg.com/originals/de/19/43/de1943f3c84bc8f331c656342fe3a108.jpg">
       
       <header><font size=30><b>      </b></header>
