--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <head>
-    <title>Springvilel K-8 GSA</title>
+    <title>Springvile K-8 GSA</title>
     </head>
 
     <body background="https://i.pinimg.com/originals/de/19/43/de1943f3c84bc8f331c656342fe3a108.jpg">
